tests/docblock_flow/use_strict_with_flow.js
'use strict';
/* @flow */

'' as void; // error
